[package]
name = "niu"
version = "0.6.1"
authors = ["niuez <niuez.graph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
log = "0.4.0"
env_logger = "0.8.4"
clap = "2.33.3"
toml = "0.5.8"
serde = { version = "^1.0.130", features = ["derive"] }
